--- a/package.json
+++ b/package.json
@@ -24,15 +24,16 @@
         "node": ">=0.8.0"
     },
 
-    "dependencies": {
-
+    "scripts": {
+        "test": "grunt test"
     },
 
     "devDependencies": {
+        "grunt": "~0.4.0",
         "grunt-contrib-jshint": "~0.2.0",
         "grunt-contrib-nodeunit": "~0.1.2",
         "grunt-contrib-clean": "~0.4.0",
-        "grunt": "~0.4.0"
+        "pngjs": "~0.4.0"
     },
 
     "peerDependencies": {
@@ -50,6 +51,13 @@
         "gruntplugin",
         "phantom",
         "phantomjs"
+    ],
+
+    "contributors": [
+        {
+            "name": "David Bushell",
+            "url": "http://dbushell.com/"
+        }
     ],
 
     "licenses": [
