--- a/package.json
+++ b/package.json
@@ -32,6 +32,10 @@
         "test": "grunt test"
     },
 
+    "dependencies": {
+        "phantomjs": "~1.9.0"
+    },
+
     "devDependencies": {
         "grunt": "~0.4.0",
         "grunt-contrib-jshint": "~0.2.0",
