converting of a large number of images

--- a/package.json
+++ b/package.json
@@ -65,6 +65,10 @@
         {
             "name": "David Bushell",
             "url": "http://dbushell.com/"
+        },
+        {
+            "name": "Vladimir Dovydenko",
+            "email": "dovyden@yandex.ru"
         }
     ],
 
