--- a/package.json
+++ b/package.json
@@ -37,15 +37,15 @@
     },
 
     "devDependencies": {
-        "grunt": "~0.4.0",
-        "grunt-contrib-jshint": "~0.2.0",
-        "grunt-contrib-nodeunit": "~0.1.2",
-        "grunt-contrib-clean": "~0.4.0",
-        "pngjs": "~0.4.0"
+        "grunt": "0.4.5",
+        "grunt-contrib-jshint": "1.0.0",
+        "grunt-contrib-nodeunit": "0.4.1",
+        "grunt-contrib-clean": "1.0.0",
+        "pngjs": "2.2.0"
     },
 
     "peerDependencies": {
-        "grunt": "~0.4.0"
+        "grunt": "0.4.5"
     },
 
     "keywords": [
