--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     },
 
     "dependencies": {
-        "phantomjs-prebuilt": "2.1.6"
+        "phantomjs-prebuilt": "git://github.com/wikimedia/phantomjs/commit/46e52fdea1780bdb0c184fe04cbff7d5aa366c03"
     },
 
     "devDependencies": {
