--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     },
 
     "dependencies": {
-        "phantomjs-prebuilt": "git://github.com/wikimedia/phantomjs.git#v2.1.6-wmf"
+        "phantomjs-prebuilt": "2.1.7"
     },
 
     "devDependencies": {
